--- a/package.json
+++ b/package.json
@@ -11,14 +11,15 @@
   "dependencies": {
     "@react-navigation/material-top-tabs": "^6.6.2",
     "@react-navigation/native": "^6.1.6",
+    "@react-navigation/stack": "^6.3.16",
     "expo": "~48.0.15",
     "expo-status-bar": "~1.4.4",
     "react": "18.2.0",
     "react-native": "0.71.7",
+    "react-native-pager-view": "6.1.2",
     "react-native-safe-area-context": "4.5.0",
     "react-native-screens": "~3.20.0",
-    "react-native-tab-view": "^3.5.1",
-    "react-native-pager-view": "6.1.2"
+    "react-native-tab-view": "^3.5.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
